--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h2 {
         </tbody>
       </table>
 
-      <p> With respect to the intrussiveness of background noise:</p>
+      <p> With respect to the intrusiveness of background noise:</p>
       <table>
         <tbody>
           <tr>
@@ -85,15 +85,15 @@ h2 {
           </tr>
           <tr>
             <td align="center">5</td>            
-            <td>Not noticable</td>
+            <td>Not noticeable</td>
           </tr>
           <tr>
             <td align="center">4</td>            
-            <td>Slightly noticable</td>
+            <td>Slightly noticeable</td>
           </tr>
           <tr>
             <td align="center">3</td>            
-            <td>Noticable but not intrusive</td>
+            <td>Noticeable but not intrusive</td>
           </tr>
           <tr>
             <td align="center">2</td>            
@@ -140,32 +140,38 @@ h2 {
 
       <h2>Example</h2>
       <h3>Level of distortion:</h3>
-      <p>The following recording represents a speech recordings with a reference score for Level of distortion: <b>5.0 (Not distorted)</b>.</p>
+      <p>The following recording represents a speech recordings with a reference score for level of distortion: <b>5.0 (Not distorted)</b>.</p>
       <audio controls style="width: 400px;">
         <source src=samples/NotDistorted.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for Level of distortion: <b>1.0 (Very distorted)</b>.</p>      
+      <p>The following recording represents a speech recordings with a reference score for level of distortion: <b>3.0 (Noticeable but not intrusive)</b>.</p>      
+      <audio controls style="width: 400px;">
+        <source src=samples/NoticeableNintrusive.wav type="audio/wav">
+        Your browser does not support the audio element.
+      </audio>
+
+      <p>The following recording represents a speech recordings with a reference score for level of distortion: <b>1.0 (Very distorted)</b>.</p>      
       <audio controls style="width: 400px;">
         <source src=samples/VeryDistorted.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
       <h3>Level of background noise:</h3>
-      <p>The following recording represents a speech recordings with a reference score for Level of background noise: <b>5.0 (Not noticeable)</b>.</p>      
+      <p>The following recording represents a speech recordings with a reference score for level of background noise: <b>5.0 (Not noticeable)</b>.</p>      
       <audio controls style="width: 400px;">
         <source src=samples/NotNoticible.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for Level of background noise: <b>4.0 (Slightly noticeable)</b>.</p>      
+      <p>The following recording represents a speech recordings with a reference score for level of background noise: <b>4.0 (Slightly noticeable)</b>.</p>      
       <audio controls style="width: 400px;">
         <source src=samples/SlightlyNoticible.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for Level of background noise: <b>1.0 (Very intrusive)</b>.</p>      
+      <p>The following recording represents a speech recordings with a reference score for level of background noise: <b>1.0 (Very intrusive)</b>.</p>      
       <audio controls style="width: 400px;">
         <source src=samples/VeryIntrusive.wav type="audio/wav">
         Your browser does not support the audio element.
@@ -177,13 +183,13 @@ h2 {
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for overall quality: <b>1.0 (Bad)</b>.</p>        
+      <p>The following recording represents a speech recordings with a reference score for overall quality: <b>1.0 (Bad)</b> due to background noise.</p>        
       <audio controls style="width: 400px;">
         <source src=samples/BadBackground.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for overall quality: <b>1.0 (Bad)</b>.</p>        
+      <p>The following recording represents a speech recordings with a reference score for overall quality: <b>1.0 (Bad)</b>  due to bad fidelity.</p>        
       <audio controls style="width: 400px;">
         <source src=samples/BadSpeaker.wav type="audio/wav">
         Your browser does not support the audio element.
