--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ h2 {
         Your browser does not support the audio element.
       </audio>
 
-      <p>The following recording represents a speech recordings with a reference score for level of distortion: <b>3.0 (Noticeable but not intrusive)</b>.</p>      
+      <p>The following recording represents a speech recordings with a reference score for level of distortion: <b>4.0 (Slightly distorted)</b>.</p>      
       <audio controls style="width: 400px;">
-        <source src=samples/NoticeableNintrusive.wav type="audio/wav">
+        <source src=samples/SlightlyDis.wav type="audio/wav">
         Your browser does not support the audio element.
       </audio>
 
